Login authentication implemented as part of the authentication flow logic

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,23 +5,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Say Hello Page</title>
+    <title>Home Page</title>
 </head>
 <body>
 
-<p>HTML PAGE WITH BODY - JSP</p>
-<br>
-<p>Hello I am a view from JSP</p>
-
+<h2> Welcome to the Home page</h2>
 <button type="button">
-    <a href="http://localhost:8080"> Go back to Home Page</a>
-</button>
-
-<button type="button">
-    <a href="http://localhost:8080/todo/login?name=Placeholder"> Login Page</a>
+    <a href="http://localhost:8080/todo/login"> Login Page</a>
 </button>
 <button type="button">
-    <a href="http://localhost:8080/todo/loginwithname?name=Placeholder"> Login Page with Name</a>
+    <a href="http://localhost:8080/todo/say-hello-jsp"> Say Hello</a>
+</button>
+<button type="button">
+    <a href="http://localhost:8080/todo/loginwithname"> Login Page with Name</a>
 </button>
 
 
